# dot-product-experiment

./: .gitignore  1d_block_dotmul.cpp  1d_block_dotmul.cu  CMakeLists.txt  README.md  main.cu  my_dot_product.h
